package com.adsamcik.signalcollector.misc

enum class DistanceUnit {
	Metric,
	Imperial
}